Bug #20615 PLUGIN: plugin name lost when loading an already-loaded name
Submitted: 21 Jun 2006 22:18 Modified: 5 Oct 2006 16:52
Reporter: Calvin Sun
Status: Closed
Category:Server: General Severity:S2 (Serious)
Version:5.1 OS:
Assigned to: Bugs System Target Version:

[21 Jun 2006 22:18] Calvin Sun
Description:
When try to load a plugin for an already-loaded name, resulting in the original name to
get lost.

How to repeat:
1. Compile a loadable plugin into the server.
2. Start the server, then try to install the plugin: install plugin ...
3. select engine, support from information_schema.engines; 
    you will not see the original plugin anymore.

Suggested fix:
The original one should continue to work.
[26 Jul 2006 22:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/9627
[28 Aug 2006 12:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10920

ChangeSet@1.2278, 2006-08-28 03:26:13-07:00, acurtis@xiphis.org +1 -0
  Bug#20615
    "plugin name lost when loading an already-loaded name"
    Do not delete existing plugin when loading a new plugin which has the
    same name.
[25 Sep 2006 19:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12488

ChangeSet@1.2323, 2006-09-25 10:37:05-07:00, acurtis@xiphis.org +1 -0
  Bug#20615
    "plugin name lost when loading an already-loaded name"
    Do not delete existing plugin when loading a new plugin which has the
    same name.
[25 Sep 2006 20:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12497

ChangeSet@1.2340, 2006-09-25 11:48:51-07:00, acurtis@xiphis.org +1 -0
  Bug#20615
    "plugin name lost when loading an already-loaded name"
    Do not delete existing plugin when loading a new plugin which has the
    same name.
[25 Sep 2006 20:50] Antony Curtis
pushed to mysql-5.1-engines tree
[3 Oct 2006 10:47] Sergey Vojtovich
Fixed in 5.1.12.
[5 Oct 2006 16:52] Paul DuBois
Noted in 5.1.12 changelog.

Loading a plugin caused any an existing plugin with the same name to be lost.