Bug#20615   "plugin name lost when loading an already-loaded name"   Do not delete existing plugin when loading a new plugin which has the   same name.